# robot_manipulation-bin-picking

./: .gitignore  README.md  data_collector.py  pose_publisher.py  train_yolo.py
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: package.ps1  package.sh  package.xml
install/calib/share/calib/: package.bash  (+5 more)
log/: latest_build
src/: example.py  move_j.py  peg_in_hole.py
src/bringup/: package.xml  setup.py
src/bringup/launch/: new_peg_in_hole_bringup.launch.py  newnew_peg_in_hole_bringup.launch.py  peg_in_hole_bringup.launch.py  peg_in_hole_bringup.py
src/calib/: setup.cfg  setup.py
src/calib/calib/: calib_hand_in_arm_tcp.py  calibration.py  check_calib.py  object_pose_transform_node..py  object_pose_transform_node.py
src/calib/launch/: object_pose_transform.launch.py
src/control/: package.xml  setup.py
src/control/control/: keyboard_continue_node.py  main.py  peg_in_hole_controller.py  robot_motion.py  task_types.py  vision_interface.py
src/control/launch/: peg_in_hole.launch.py
src/robot_ex_2026/: setup.cfg  setup.py
src/robot_ex_2026/install/: local_setup.sh  setup.sh
src/robot_ex_2026/log/: latest_build
src/robot_ex_2026/robot_ex_2026/: grip_current.py  motor_id_check.py
src/simultion/: rb5.xml  rb5_sim.py  scene_rb5.xml
src/vision/: README.md  package.xml  setup.py
src/vision/launch/: pose_publisher_ob_in.launch.py
src/vision/scripts/: analyze_results.py  eval_plot.py
src/vision/vision/: new_pose_publisher_ob_in.py  pose_publisher.py  pose_publisher_newenw.py  pose_publisher_ob_in.py  pose_publisher_yaw.py
(+23 files in other folders)
