<?xml version="1.0"?>
<package format="3">
  <name>vision</name>
  <version>0.0.1</version>
  <description>Bin picking object detection and 3D pose estimation</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
